--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "tailwindcss": "^3.3.0"
   },
   "scripts": {
+    "start": "vite --host 0.0.0.0 --port 80",
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "serve": "vite preview --host 0.0.0.0 --port 80"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
