--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,19 @@
 server {
     listen 80;
-    server_name _;
-    root /usr/share/nginx/html;
-    index index.html;
-    
     location / {
+        root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
+        index index.html;
+    }
+
+    location /health {
+        access_log off;
+        add_header Content-Type text/plain;
+        return 200 'healthy';
+    }
+
+    error_page 502 /502.html;
+    location = /502.html {
+        root /usr/share/nginx/html;
     }
 }
