--- a/nginx.conf
+++ b/nginx.conf
@@ -1,19 +1,23 @@
 server {
     listen 80;
+    root /usr/share/nginx/html;
+    
     location / {
-        root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
-        index index.html;
+        add_header Cache-Control "no-cache";
     }
-
-    location /health {
-        access_log off;
-        add_header Content-Type text/plain;
-        return 200 'healthy';
+    
+    location /static {
+        expires 1y;
+        add_header Cache-Control "public";
     }
-
-    error_page 502 /502.html;
-    location = /502.html {
-        root /usr/share/nginx/html;
+    
+    location /api {
+        proxy_pass http://localhost:80;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
     }
 }
