--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.9.5",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "express": "^4.18.2"
   },
   "scripts": {
-    "start": "vite --host 0.0.0.0 --port 80",
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview --host 0.0.0.0 --port 80"
+    "start": "node server.js"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
