--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "prompt-gen",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.0.5",
