--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "framer-motion": "^12.0.0",
     "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "framer-motion": "^10.16.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.9.5",
@@ -17,7 +17,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "start": "node server.js"
+    "start": "node server.js",
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
