--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "type": "module",
   "dependencies": {
-    "@nextui-org/react": "^2.2.9",
-    "framer-motion": "^12.0.0",
+    "@headlessui/react": "^1.7.17",
     "@types/node": "^16.18.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "^4.9.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "tailwind-merge": "^2.1.0",
+    "clsx": "^2.0.0"
   },
   "scripts": {
     "dev": "vite",
